tests/NormalTests/paczka1/fuzzy1/92566583.err
Error in line 4: pKrd A928 95,4
Error in line 31: jPkzEPEEQAc A648 70,0
Error in line 34: jPkzEPEEQAc S327 8,4
